Fix issue with inline background image not showing up.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -543,10 +543,8 @@ the inline background style for the background image  */
 }
 
 .card-picture {
-  /* tester image */
-  background-image: url("https://www.signupgenius.com/cms/images/home/84072225_600x400.jpg");
-  background-size: cover;
-  background-position: center;
+  background-size: cover !important;
+  background-position: center !important;
   height: 100%;
 }
 
